Fix spacing issue in Web results section (maybe hack).

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1034,6 +1034,10 @@ table caption {
     border-radius: 3px;
 }
 
+.web-header + .web-provider-tab {
+    padding-left: 0;
+}
+
 .ai-provider-tab.active, .wiki-provider-tab.active, .web-provider-tab.active, .graph-size-tab.active {
     font-weight: bold;
     background-color: var(--tab-active-bg);
